syntax = "proto3";

option go_package = "github.com/momentohq/client-sdk-go;client_sdk_go";
option java_multiple_files = true;
option java_package = "grpc.store";
option csharp_namespace = "Momento.Protos.Store";

package store;

service Store {
  rpc Get(_StoreGetRequest) returns (_StoreGetResponse) {}
  rpc Set(_StoreSetRequest) returns (_StoreSetResponse) {}
  rpc Delete(_StoreDeleteRequest) returns (_StoreDeleteResponse) {}
}

message _StoreValue {
  oneof value {
    bytes bytes_value = 1;
    string string_value = 2;
    int64 integer_value = 3;
    double double_value = 4;
  }
}

message _StoreGetRequest {
  string key = 1;
}

message _StoreGetResponse {
  _StoreValue value = 1;
}

message _StoreSetRequest {
  string key = 1;
  _StoreValue value = 2;
}

message _StoreSetResponse { }

message _StoreDeleteRequest {
  string key = 1;
}

message _StoreDeleteResponse { }
